[API] Add filter categories
* Add filter_categories to all assets except Pipelines
* The filter_categories are represented by a Python dictionary
  which is stored in MySQL columns of datatype JSON
* All API list endpoints except pipelines support filtering
  by filter_categories making use of MySQL JSON support

Resolves #167
