# api/server/swagger_server/models/api_model.py
@@ -18,19 +18,19 @@ from datetime import date, datetime  # noqa: F401
 
 from typing import List, Dict  # noqa: F401
 
-from swagger_server.models.base_model_ import Model
+from swagger_server.models.api_asset import ApiAsset
 from swagger_server.models.api_model_framework import ApiModelFramework  # noqa: F401,E501
 from swagger_server.models.api_parameter import ApiParameter  # noqa: F401,E501
 from swagger_server import util
 
 
-class ApiModel(Model):
+class ApiModel(ApiAsset):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
 
-    def __init__(self, id: str=None, created_at: datetime=None, name: str=None, description: str=None, featured: bool=None, publish_approved: bool=None, related_assets: List[str]=None, domain: str=None, labels: Dict[str, str]=None, framework: ApiModelFramework=None, trainable: bool=None, trainable_tested_platforms: List[str]=None, trainable_credentials_required: bool=None, trainable_parameters: List[ApiParameter]=None, servable: bool=None, servable_tested_platforms: List[str]=None, servable_credentials_required: bool=None, servable_parameters: List[ApiParameter]=None):  # noqa: E501
+    def __init__(self, id: str=None, created_at: datetime=None, name: str=None, description: str=None, featured: bool=None, publish_approved: bool=None, related_assets: List[str]=None, filter_categories: Dict[str, str]=None, domain: str=None, labels: Dict[str, str]=None, framework: ApiModelFramework=None, trainable: bool=None, trainable_tested_platforms: List[str]=None, trainable_credentials_required: bool=None, trainable_parameters: List[ApiParameter]=None, servable: bool=None, servable_tested_platforms: List[str]=None, servable_credentials_required: bool=None, servable_parameters: List[ApiParameter]=None):  # noqa: E501
         """ApiModel - a model defined in Swagger
 
         :param id: The id of this ApiModel.  # noqa: E501
@@ -47,6 +47,8 @@ class ApiModel(Model):
         :type publish_approved: bool
         :param related_assets: The related_assets of this ApiModel.  # noqa: E501
         :type related_assets: List[str]
+        :param filter_categories: The filter_categories of this ApiModel.  # noqa: E501
+        :type filter_categories: Dict[str, str]
         :param domain: The domain of this ApiModel.  # noqa: E501
         :type domain: str
         :param labels: The labels of this ApiModel.  # noqa: E501
@@ -78,6 +80,7 @@ class ApiModel(Model):
             'featured': bool,
             'publish_approved': bool,
             'related_assets': List[str],
+            'filter_categories': Dict[str, str],
             'domain': str,
             'labels': Dict[str, str],
             'framework': ApiModelFramework,
@@ -99,6 +102,7 @@ class ApiModel(Model):
             'featured': 'featured',
             'publish_approved': 'publish_approved',
             'related_assets': 'related_assets',
+            'filter_categories': 'filter_categories',
             'domain': 'domain',
             'labels': 'labels',
             'framework': 'framework',
@@ -119,6 +123,7 @@ class ApiModel(Model):
         self._featured = featured
         self._publish_approved = publish_approved
         self._related_assets = related_assets
+        self._filter_categories = filter_categories
         self._domain = domain
         self._labels = labels
         self._framework = framework
@@ -292,6 +297,27 @@ class ApiModel(Model):
         """
 
         self._related_assets = related_assets
+
+    @property
+    def filter_categories(self) -> Dict[str, str]:
+        """Gets the filter_categories of this ApiModel.
+
+
+        :return: The filter_categories of this ApiModel.
+        :rtype: Dict[str, str]
+        """
+        return self._filter_categories
+
+    @filter_categories.setter
+    def filter_categories(self, filter_categories: Dict[str, str]):
+        """Sets the filter_categories of this ApiModel.
+
+
+        :param filter_categories: The filter_categories of this ApiModel.
+        :type filter_categories: Dict[str, str]
+        """
+
+        self._filter_categories = filter_categories
 
     @property
     def domain(self) -> str:
